services/go-service/k8s/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-service-ingress
  namespace: ""
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /go-service-dev
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 80
